objects/Bill__c.object
<CustomObject>
    <fields>
        <fullName>Bill_number__c</fullName>
        <label>Bill number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Customer_name__c</fullName>
        <label>Customer name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Paid</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Bill</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Bill Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bill</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>